--- a/Home.html
+++ b/Home.html
@@ -36,6 +36,7 @@
             <ul class="u-nav u-spacing-20 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-2-base" href="Home.html" style="padding: 10px;">Home</a>
 </li><li class="u-nav-item"><a class="u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-2-base" href="About.html" style="padding: 10px;">About</a>
 </li><li class="u-nav-item"><a class="u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-2-base" href="Contact.html" style="padding: 10px;">Contact</a>
+</li><li class="u-nav-item"><a class="u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-2-base" href="Resume.html" style="padding: 10px;">Resume</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -45,6 +46,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html">Contact</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Resume.html">Resume</a>
 </li></ul>
               </div>
             </div>
@@ -53,15 +55,17 @@
         </nav>
       </div></header>
     <section class="u-align-center-lg u-align-center-md u-align-center-xl u-align-left-sm u-align-left-xs u-clearfix u-section-1" id="carousel_b681">
-      <div class="u-clearfix u-sheet u-valign-middle-xl u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-size-26-lg u-size-29-xl u-size-60-md u-size-60-sm u-size-60-xs">
                 <div class="u-layout-col">
                   <div class="u-align-center-lg u-align-center-xl u-align-left-md u-align-left-sm u-align-left-xs u-container-style u-layout-cell u-radius-20 u-size-60 u-layout-cell-1">
-                    <div class="u-container-layout u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-valign-middle-xs u-container-layout-1">
-                      <div class="u-image u-image-circle u-image-1" data-image-width="1280" data-image-height="1280"></div>
+                    <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-1">
+                      <div class="u-expanded-width u-image u-image-circle u-preserve-proportions u-image-1" data-image-width="2639" data-image-height="2872">
+                        <div class="u-preserve-proportions-child" style="padding-top: 100%;"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -80,30 +84,28 @@ including server installations, PACS application deployment and support,
 desktop support, and IT project planning and rollouts. My passion for
 technology and innovation drives me to constantly seek new solutions and drive
 business success.</p>
-                      <p class="u-text u-text-palette-5-dark-2 u-text-4">Image by <a href="https://www.freepik.com/photos/people" class="u-border-1 u-border-active-palette-3-base u-border-black u-border-hover-palette-3-base u-border-no-left u-border-no-right u-border-no-top u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-link u-button-style u-none u-radius-0 u-text-body-color u-top-left-radius-0 u-top-right-radius-0 u-btn-1" target="_blank">Freepik</a>
-                      </p>
                     </div>
                   </div>
                   <div class="u-align-left u-container-style u-layout-cell u-size-30 u-layout-cell-3">
                     <div class="u-container-layout u-valign-top-xs u-container-layout-3">
                       <div class="u-align-center u-border-2 u-border-palette-1-light-2 u-container-style u-group u-hover-feature u-palette-1-light-2 u-shape-circle u-group-1" data-href="https://nicepage.com">
                         <div class="u-container-layout u-valign-middle u-container-layout-4">
-                          <h5 class="u-hover-feature u-text u-text-default u-text-palette-1-base u-text-5">
-                            <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" href="https://nicepage.com/k/auction-website-templates">Resume</a>
+                          <h5 class="u-hover-feature u-text u-text-default u-text-palette-1-base u-text-4">
+                            <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" href="https://nicepage.com/k/auction-website-templates">Resume</a>
                           </h5>
                         </div>
                       </div>
                       <div class="u-align-center u-border-2 u-border-palette-2-light-2 u-container-style u-group u-hover-feature u-palette-2-light-2 u-shape-circle u-group-2">
                         <div class="u-container-layout u-valign-middle-xl">
-                          <h5 class="u-hover-feature u-text u-text-default u-text-palette-2-base u-text-6">
-                            <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-3" href="https://nicepage.com/c/grid-website-templates">Projects</a>
+                          <h5 class="u-hover-feature u-text u-text-default u-text-palette-2-base u-text-5">
+                            <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-2" href="https://nicepage.com/c/grid-website-templates">Projects</a>
                           </h5>
                         </div>
                       </div>
                       <div class="u-align-center u-border-2 u-border-palette-3-light-2 u-container-style u-group u-hover-feature u-palette-3-light-2 u-shape-circle u-group-3">
                         <div class="u-container-layout u-valign-middle">
-                          <h5 class="u-hover-feature u-text u-text-default u-text-palette-3-base u-text-7">
-                            <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-3-base u-btn-4" href="https://nicepage.com/website-templates">Contacts</a>
+                          <h5 class="u-hover-feature u-text u-text-default u-text-palette-3-base u-text-6">
+                            <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-3-base u-btn-3" href="https://nicepage.com/website-templates">Contacts</a>
                           </h5>
                         </div>
                       </div>
